home page upadted

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
     monospace;
 }
 a:hover {
-  color: #01bf71 !important;
+  color: #b25ce7 !important;
   text-decoration: none !important;
 }
 * {
