--- a/src/Component/Contact/ContactCom.css
+++ b/src/Component/Contact/ContactCom.css
@@ -18,3 +18,8 @@
   background: #b25ce7 !important;
   color: #fff !important;
 }
+
+.contact-button:hover {
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.05);
+}
